# hs-send-gcode

./: Makefile  README.md  send-gcode.cabal
send-gcode/: App.hs  GCodeDictionary.hs  Main.hs
